WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167981
[GStreamer] Critical warnings when media player is destroyed
https://bugs.webkit.org/show_bug.cgi?id=167981
Summary
[GStreamer] Critical warnings when media player is destroyed
Carlos Garcia Campos
Reported
2017-02-08 03:40:36 PST
(WebKitWebProcess:6556): GLib-GObject-WARNING **: invalid (NULL) pointer instance (WebKitWebProcess:6556): GLib-GObject-CRITICAL **: g_signal_handlers_disconnect_matched: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed #0 _g_log_abort (breakpoint=breakpoint@entry=1) at gmessages.c:487 #1 0x00007f388fbf6e25 in g_logv (log_domain=0x7f388fef22e4 "GLib-GObject", log_level=G_LOG_LEVEL_WARNING, format=<optimized out>, args=args@entry=0x7ffef14916c8) at gmessages.c:1296 #2 0x00007f388fbf6f72 in g_log (log_domain=log_domain@entry=0x7f388fef22e4 "GLib-GObject", log_level=log_level@entry=G_LOG_LEVEL_WARNING, format=<optimized out>) at gmessages.c:1337 #3 0x00007f388feeb8fa in g_type_check_instance (type_instance=type_instance@entry=0x0) at gtype.c:4142 #4 0x00007f388fee0184 in g_signal_handlers_disconnect_matched (instance=0x0, mask=(G_SIGNAL_MATCH_FUNC | G_SIGNAL_MATCH_DATA), signal_id=0, detail=0, closure=0x0, func=0x7f3898aef720 <WebCore::MediaPlayerPrivateGStreamer::uriDecodeBinElementAddedCallback(_GstBin*, _GstElement*, WebCore::MediaPlayerPrivateGStreamer*)>, data=0x7f3811a958c0) at gsignal.c:2931 #5 0x00007f3898af5ac0 in WebCore::MediaPlayerPrivateGStreamer::~MediaPlayerPrivateGStreamer() () from /home/cgarcia/src/git/gnome/WebKit-2.14/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #6 0x00007f3898af5bf9 in WebCore::MediaPlayerPrivateGStreamer::~MediaPlayerPrivateGStreamer() () from /home/cgarcia/src/git/gnome/WebKit-2.14/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #7 0x00007f38985fa8f5 in WebCore::MediaPlayer::~MediaPlayer() () from /home/cgarcia/src/git/gnome/WebKit-2.14/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #8 0x00007f38985fa989 in WebCore::MediaPlayer::~MediaPlayer() () from /home/cgarcia/src/git/gnome/WebKit-2.14/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #9 0x00007f389820b568 in WebCore::HTMLMediaElement::createMediaPlayer() () from /home/cgarcia/src/git/gnome/WebKit-2.14/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #10 0x00007f389820bced in WebCore::HTMLMediaElement::prepareForLoad() () from /home/cgarcia/src/git/gnome/WebKit-2.14/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #11 0x00007f389820f08c in WebCore::HTMLMediaElement::load() () from /home/cgarcia/src/git/gnome/WebKit-2.14/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #12 0x00007f3898e42346 in WebCore::jsHTMLMediaElementPrototypeFunctionLoad(JSC::ExecState*) () from /home/cgarcia/src/git/gnome/WebKit-2.14/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #13 0x00007f3833ffffc8 in ?? () #14 0x00007ffef14919b0 in ?? () #15 0x00007f389616a4df in llint_entry () from /home/cgarcia/src/git/gnome/WebKit-2.14/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18
Attachments
Patch
(2.08 KB, patch)
2017-02-08 03:42 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-02-08 03:42:26 PST
Created
attachment 300888
[details]
Patch
Enrique Ocaña
Comment 2
2017-02-08 03:45:00 PST
This was caused by my patch on
https://bugs.webkit.org/show_bug.cgi?id=119477
, sorry.
Enrique Ocaña
Comment 3
2017-02-08 04:06:43 PST
At first I feared that with the new condition (or even with the critical) the handler remained connected, but in the end it'll be automatically disconnected when the GstUriDecodeBin is destroyed:
https://developer.gnome.org/gobject/stable/gobject-Signals.html
states that "signal handlers are automatically disconnected when the object emitting the signal is finalised". Therefore, the patch looks good.
WebKit Commit Bot
Comment 4
2017-02-08 04:40:56 PST
Comment on
attachment 300888
[details]
Patch Clearing flags on attachment: 300888 Committed
r211868
: <
http://trac.webkit.org/changeset/211868
>
WebKit Commit Bot
Comment 5
2017-02-08 04:41:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug