[GStreamer] Critical warnings when media player is destroyed https://bugs.webkit.org/show_bug.cgi?id=167981

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2017-02-08
Reviewed by Xabier Rodriguez-Calvar.

It can happen that the source doesn't have a parent when we try to disconnect the element-added signal.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::~MediaPlayerPrivateGStreamer):
(WebCore::MediaPlayerPrivateGStreamer::sourceChanged):

Canonical link: https://commits.webkit.org/185008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211868 268f45cc-cd09-0410-ab3c-d52691b4dbfc